--- a/src/pages/panel-control-admin/panel-control-admin.component.html
+++ b/src/pages/panel-control-admin/panel-control-admin.component.html
@@ -18,7 +18,7 @@
         <li [ngbNavItem]="3">
             <button ngbNavLink>USUARIOS</button>
             <ng-template ngbNavContent>
-                <h1>LISTA DE USUARIOS</h1>
+                <app-admin-usuarios></app-admin-usuarios>
             </ng-template>
         </li>
     </ul>
