--- a/src/pages/admin-productos/admin-productos.component.html
+++ b/src/pages/admin-productos/admin-productos.component.html
@@ -138,7 +138,7 @@
           <td>{{ articulo.marca_producto }}</td>
           <td>{{ articulo.descripcion }}</td>
           <td>{{ articulo.stock }}</td>
-          <td><button class="btn btn-primary">Editar</button></td>
+          <td><button class="btn btn-primary" (click)="editarProducto(articulo.id_producto)">Editar</button></td>
           <td><button class="btn btn-danger" (click)="open('autofocus')">Borrar</button></td>
         </tr>
       </tbody>
