--- a/src/core/footer/footer.component.html
+++ b/src/core/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<div class="contenedor-footer">
     <div class="horarios">
         <img src="../../assets/icons/horario.svg" alt="reloj horario" />
         <div class="letras-horas">
@@ -27,4 +27,6 @@
        
        
     </div>
-</footer>
+
+</div>
+   
