--- a/src/core/footer/footer.component.scss
+++ b/src/core/footer/footer.component.scss
@@ -1,13 +1,17 @@
-footer {
+
+.contenedor-footer {
     background-color: #02799A;
     color: white;
-    position: relative;
     width: 100%;
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+   
 }
+
+
+/*
 
 .boton-side {
     background: none;
@@ -15,12 +19,14 @@ footer {
     padding: 0;
     margin: 0;
     font: inherit;
-    /* Inherita las propiedades de fuente */
+   
     color: inherit;
-    /* Inherita el color del texto */
+   
     cursor: pointer;
-    /* Opcional, para mantener el comportamiento de clic */
+
 }
+
+*/
 
 
 
