reiniciado el css a la version anterior donde el footer se comporta normal en la parte admin

--- a/src/core/footer/footer.component.html
+++ b/src/core/footer/footer.component.html
@@ -1,32 +1,34 @@
-<div class="contenedor-footer">
+<footer>
     <div class="horarios">
         <img src="../../assets/icons/horario.svg" alt="reloj horario" />
         <div class="letras-horas">
             <div>Lunes-Viernes: 10:00-14:00 16:00-20:00</div>
-        <div>Sabados: 10:00-14:00</div> 
+            <div>Sabados: 10:00-14:00</div>
         </div>
-        
+
     </div>
     <div class="info">
         <div class="email">
-            <img class="elementos-footer"  src="../../assets/icons/Mail.svg" alt="simbolo de correo" />
-            <p  class="elementos-footer">Jsalgua&#64;g.educand.es</p>
+            <img class="elementos-footer" src="../../assets/icons/Mail.svg" alt="simbolo de correo" />
+            <p class="elementos-footer">Jsalgua&#64;g.educand.es</p>
         </div>
         <div class="telefono">
             <img class="elementos-footer" src="../../assets/icons/Phone.svg" alt="simbolo de telefono" />
-            <p class="elementos-footer" >952656565</p>
+            <p class="elementos-footer">952656565</p>
         </div>
     </div>
     <div class="redes-sociales">
-        <div> <p>Siguenos en:</p></div>
+        <div>
+            <p>Siguenos en:</p>
+        </div>
         <div>
             <img src="../../assets/icons/IG2.svg" alt="simbolo de IG" />
             <img src="../../assets/icons/FaceBook.svg" alt="simbolo de Facebook" />
             <img src="../../assets/icons/Twitter.svg" alt="simbolo de Twitter" />
         </div>
-       
-       
+
+
     </div>
 
-</div>
-   
+
+</footer>
