add boton para volver al panel de control del admin

--- a/src/pages/admin-editar-productos/admin-editar-productos.component.html
+++ b/src/pages/admin-editar-productos/admin-editar-productos.component.html
@@ -55,8 +55,11 @@
         class="form-control"
       />
     </div>
-    <button type="button" class="btn btn-dark black-button">
+    <button type="button" class="btn btn-dark black-button m-2">
       Editar
     </button>
+    <button type="button" (click)="volver()" class="btn btn-primary black-button m-2">
+        Cancelar
+      </button>
   </form>
 </div>
