--- a/src/core/footer/footer.component.scss
+++ b/src/core/footer/footer.component.scss
@@ -2,10 +2,12 @@ footer {
     background-color: #02799A;
     color: white;
     width: 100%;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+   position: relative;
+      
 
 }
 
