--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,9 @@
 
 body { 
      top: 0; left: 0; right: 0; bottom: 0; margin: 0; padding: 0; 
+    
     }
+ 
  app-footer {
-     position: fixed; width: 100%; bottom: 0
+     position: fixed; width: 100%; bottom: 0;
     }
