gestion de tipo de usuario y enrutamiento  con api al 100%

--- a/src/core/header/header.component.html
+++ b/src/core/header/header.component.html
@@ -23,7 +23,7 @@
             </button>
         </li>
         <li className="loginOut">
-            <button>
+            <button (click)="logout()">
                 <img src="/assets/icons/LogOut.svg" alt="logout" />
             </button>
         </li>
