--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -4,13 +4,13 @@
     <h2>Iniciar Sesión</h2>
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" ngModel required class="form-control" />
+      <input type="email" id="email" name="email" [(ngModel)]="email" required class="form-control" />
     </div>
     <div class="form-group">
       <label for="password">Contraseña</label>
-      <input type="password" id="password" name="password" ngModel required class="form-control" />
+      <input type="password" id="password" name="password" [(ngModel)]="password" required class="form-control" />
     </div>
-    <button type="button" class="btn btn-primary">Entrar</button>
+    <button type="submit" class="btn btn-primary">Entrar</button>
     <button type="button" class="btn btn-secondary black-button" (click)="irCrearCuenta()">
       Crear Cuenta
     </button>
