--- a/src/core/header/header.component.html
+++ b/src/core/header/header.component.html
@@ -89,7 +89,7 @@
                     <h4>Total: {{ totalCompra | currency }}</h4>
                 </div>
                 <button type="button" class="btn btn-outline-secondary"
-                    (click)="offcanvas.close('Close click'); hacePedido()">Confirmar Pedido</button>
+                    (click)="offcanvas.close('Close click'); hacePedido();" >Confirmar Pedido</button>
             </div>
         </div>
 
