bloqueo de pedido listo con alert incluido

--- a/src/core/header/header.component.html
+++ b/src/core/header/header.component.html
@@ -1,4 +1,6 @@
-<header>
+<div *ngIf="showAlert" class=" custom-alert alert alert-warning" role="alert"> {{ alertMessage }} </div>
+ 
+ <header>
 
     <ul>
         <li>
