hago pedidos de forma correcta

--- a/src/core/header/header.component.html
+++ b/src/core/header/header.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="showAlert" class=" custom-alert alert alert-warning" role="alert"> {{ alertMessage }} </div>
+<div *ngIf="showAlert2" class=" custom-alert2 alert alert-warning" role="alert"> {{ alertMessage2 }} </div>
  
  <header>
 
