--- a/src/core/header/header.component.scss
+++ b/src/core/header/header.component.scss
@@ -180,3 +180,29 @@ ul li button {
     font-weight: bold; // Hacer el texto bold
   }
   
+
+  .custom-alert2 {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 9999; // Asegura que la alerta esté encima de otros elementos
+    background-color:rgb(119, 198, 229); // Cambia el color de fondo
+    color: #000; // Cambia el color del texto
+    padding: 20px;
+    font-size: 18px;
+    border-radius: 5px;
+    width: auto;
+    max-width: 90%;
+    text-align: center;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .alert-warning2 {
+    background-color: rgb(119, 198, 229); // Color de fondo
+    color: black; // Color del texto
+    font-weight: bold; // Hacer el texto bold
+  }
