--- a/src/pages/admin-productos/admin-productos.component.html
+++ b/src/pages/admin-productos/admin-productos.component.html
@@ -127,7 +127,7 @@
           <td>
             <button
               class="btn btn-primary"
-              (click)="editarProducto(articulo.id_producto)"
+              (click)="editarProducto(articulo)"
             >
               Editar
             </button>
