--- a/src/pages/inicio/inicio.component.html
+++ b/src/pages/inicio/inicio.component.html
@@ -2,25 +2,25 @@
     <ul>
         <li (click)="irAProductos(1)">
             <div class="inicio-pages">
-                <img src="../../assets/inicio/Inicio_surf.jpg" alt="Logo de la tienda del menú" />
+                <img src="assets/inicio/Inicio_surf.jpg" alt="Logo de la tienda del menú" />
                 <h2 class="categoria-inicio">SURF</h2>
             </div>
         </li>
         <li (click)="irAProductos(2)">
             <div class="inicio-pages">
-                <img src="../../assets/inicio/Inicio_body.jpg" alt="Logo de la tienda del menú" />
+                <img src="assets/inicio/Inicio_body.jpg" alt="Logo de la tienda del menú" />
                 <h2 class="categoria-inicio">BODYBOARD</h2>
             </div>
         </li>
         <li (click)="irAProductos(3)">
             <div class="inicio-pages">
-                <img src="../../assets/inicio/Inicio_Skate.jpg" alt="Logo de la tienda del menú" />
+                <img src="assets/inicio/Inicio_Skate.jpg" alt="Logo de la tienda del menú" />
                 <h2 class="categoria-inicio">SKATE</h2>
             </div>
         </li>
         <li (click)="irAProductos(4)">
             <div class="inicio-pages">
-                <img src="../../assets/inicio/Inicio_neoprenos.jpg" alt="Logo de la tienda del menú" />
+                <img src="assets/inicio/Inicio_neoprenos.jpg" alt="Logo de la tienda del menú" />
                 <h2 class="categoria-inicio">NEOPRENOS</h2>
             </div>
         </li>
